--- a/java.html
+++ b/java.html
@@ -18,7 +18,7 @@
          <div class="content">
             <div class="content1">
                 <div class="c1">1</div>
-                <div class="c2">introduction</div>
+                <div class="c2">intro</div>
                 <div class="c3"><a href="">Video</a></div>
                 <div class="c4">Notes</div>
                 <div class="c5">Mock Question</div>
