--- a/java.html
+++ b/java.html
@@ -27,21 +27,21 @@
                 <div class="c1">2</div>
                 <div class="c2">Variable</div>
                 <div class="c3"><a href="https://www.youtube.com/watch?v=9RCuKrze_-k&pp=ygUQdmFyaWFibGUgaW4gamF2YQ%3D%3D">Video</a></div>
-                <div class="c4">Notes</div>
+                <div class="c4" id="variable">Notes</div>
                 <div class="c5">Mock question</div>
             </div>
             <div class="content1">
                 <div class="c1">3</div>
                 <div class="c2">Operator</div>
                 <div class="c3"><a href="https://www.youtube.com/watch?v=Oud4alVQU4s&pp=ygUQb3BlcmF0b3IgaW4gamF2YQ%3D%3D">Video</a></div>
-                <div class="c4">Notes</div>
+                <div class="c4" id="operator" >Notes</div>
                 <div class="c5">Mock Question</div>
             </div>
             <div class="content1">
                 <div class="c1">4</div>
                 <div class="c2">Conditional statement</div>
                 <div class="c3"><a href="https://www.youtube.com/watch?v=I5srDu75h_M&pp=ygUcY29uZGl0aW9uYWwgc3RhdG1lbnQgaW4gamF2YQ%3D%3D">Video</a></div>
-                <div class="c4">Notes</div>
+                <div class="c4" id="conditional">Notes</div>
                 <div class="c5">Mock Question</div>
             </div>
             <div class="content1">
@@ -116,5 +116,6 @@
             </div>
          </div>
     </div>
+    <script src="java.js"></script>
 </body>
 </html>
