--- a/java.html
+++ b/java.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="java.css">
     <title>Document</title>
+    <link rel="icon" type = "" href = "https://cdn.icon-icons.com/icons2/2108/PNG/96/dev_to_icon_130961.png" sizes="39x39">
 </head>
 <body>
     <div class="box">
@@ -27,7 +28,7 @@
                 <div class="c1">2</div>
                 <div class="c2">Variable</div>
                 <div class="c3"><a href="https://www.youtube.com/watch?v=9RCuKrze_-k&pp=ygUQdmFyaWFibGUgaW4gamF2YQ%3D%3D">Video</a></div>
-                <div class="c4" id="variable">Notes</div>
+                <div class="c4" id="variable"><a href = "./content/variable.html">Notes</a></div>
                 <div class="c5">Mock question</div>
             </div>
             <div class="content1">
@@ -42,7 +43,7 @@
                 <div class="c2">Conditional statement</div>
                 <div class="c3"><a href="https://www.youtube.com/watch?v=I5srDu75h_M&pp=ygUcY29uZGl0aW9uYWwgc3RhdG1lbnQgaW4gamF2YQ%3D%3D">Video</a></div>
                 <div class="c4" id="conditional">Notes</div>
-                <div class="c5">Mock Question</div>
+                <div class="c5"><a href="./MOCK/CS.HTML">Mock question</a></div>
             </div>
             <div class="content1">
                 <div class="c1">5</div>
